--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,11 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
+        <link rel="stylesheet" href="{{ asset('build/css/app.css') }}">
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
         {% block stylesheets %}{% endblock %}
-
+        <script src="{{ asset('build/js/app.js') }}"></script>
         {% block javascripts %}{% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+       <div class="container">
+           {% block body %}{% endblock %}
+       </div>
     </body>
 </html>
